[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Douyin_TikTok_Download_API"
version = "0.1.0"
description = "An API for downloading videos from Douyin and TikTok"
authors = [
    { name = "davidxiao", email = "your.email@example.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "aiohttp==3.8.4",
    "aiosignal==1.3.1",
    "async-timeout==4.0.2",
    "attrs==23.1.0",
    "certifi==2023.5.7",
    "charset-normalizer==3.1.0",
    "colorama==0.4.6",
    "frozenlist==1.3.3",
    "idna==3.4",
    "multidict==6.0.4",
    "openai==0.27.7",
    "requests==2.31.0",
    "tqdm==4.65.0",
    "urllib3==2.0.2",
    "yarl==1.9.2",
    "beautifulsoup4==4.12.2",
    "bs4==0.0.1",
    "Flask==2.3.2",
    "Flask-Cors==3.0.10",
    "js2py==0.74",
    "lxml==4.9.2",
    "playwright==1.34.0",
    "pycryptodome==3.18.0",
    "requests>=2.32.2,<3",
    "websockets>=13.0",
    "aiofiles==23.2.1",
    "annotated-types==0.6.0",
    "anyio==4.3.0",
    "browser-cookie3==0.19.1",
    "certifi>=2023.2.2",
    "click==8.1.7",
    "colorama==0.4.6",
    "fastapi==0.110.2",
    "h11==0.14.0",
]

[project.urls]
"Homepage" = "https://github.com/davidxiao/Douyin_TikTok_Download_API"
"Bug Tracker" = "https://github.com/davidxiao/Douyin_TikTok_Download_API/issues"

[tool.setuptools.packages.find]
where = ["."]
